# lsmv

./: .gitignore  BUILD  README.md  WORKSPACE
dummy_data_pusher/: BUILD.bazel  main.go
fuse/: BUILD.bazel  controlfs.go  controller.go  dir.go  file.go  main.go
objectstore/: BUILD.bazel  main.go
objectstore/in_memory_store/: BUILD.bazel  in_memory_store.go
proto/: BUILD  BUILD.bazel  objects.proto  objectstore.proto
proto/data/: BUILD.bazel  objects.proto
proto/objectstore/: BUILD.bazel  objectstore.proto
proto/versioning/: BUILD.bazel  versioning.proto
versioning/: BUILD.bazel  commit.go  commit_test.go  main.go  versioning.go
