load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "fuse_lib",
    srcs = ["main.go"],
    importpath = "lsmv/fuse",
    visibility = ["//visibility:private"],
    deps = [
        "@org_bazil_fuse//:fuse",
        "@org_bazil_fuse//fs",
        "@org_bazil_fuse//fs/fstestutil",
    ],
)

go_binary(
    name = "fuse",
    embed = [":fuse_lib"],
    visibility = ["//visibility:public"],
)
