load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "objectstore_lib",
    srcs = ["main.go"],
    importpath = "lsmv/objectstore",
    visibility = ["//visibility:private"],
    deps = [
        "//proto/data",
        "//proto/objectstore",
        "@org_golang_google_grpc//:go_default_library",
    ],
)

go_binary(
    name = "objectstore",
    embed = [":objectstore_lib"],
    visibility = ["//visibility:public"],
)
