load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "versioning_lib",
    srcs = ["main.go"],
    importpath = "lsmv/versioning",
    visibility = ["//visibility:private"],
    deps = [
        "//proto/objectstore",
        "//proto/versioning",
        "@org_golang_google_grpc//:go_default_library",
    ],
)

go_binary(
    name = "versioning",
    embed = [":versioning_lib"],
    visibility = ["//visibility:public"],
)
