load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "versioning",
    srcs = [
        "commit.go",
        "versioning.go",
    ],
    importpath = "lsmv/versioning",
    visibility = ["//visibility:public"],
    deps = [
        "//proto/objectstore",
        "//proto/versioning",
        "@org_golang_google_grpc//:go_default_library",
    ],
)

go_test(
    name = "versioning_test",
    srcs = ["commit_test.go"],
    embed = [":versioning"],
    deps = [
        "//objectstore/in_memory_store",
        "//proto/data",
        "//proto/objectstore",
        "//proto/versioning",
    ],
)
