load("@rules_proto//proto:defs.bzl", "proto_library")
load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

proto_library(
    name = "objectstore_proto",
    srcs = ["objectstore.proto"],
    visibility = ["//visibility:public"],
    deps = ["//proto/data:data_proto"],
)

go_proto_library(
    name = "objectstore_go_proto",
    compilers = ["@io_bazel_rules_go//proto:go_grpc"],
    importpath = "lsmv/proto/objectstore",
    proto = ":objectstore_proto",
    visibility = ["//visibility:public"],
    deps = ["//proto/data"],
)

go_library(
    name = "objectstore",
    embed = [":objectstore_go_proto"],
    importpath = "lsmv/proto/objectstore",
    visibility = ["//visibility:public"],
)
