load("@rules_proto//proto:defs.bzl", "proto_library")
load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

proto_library(
    name = "versioning_proto",
    srcs = ["versioning.proto"],
    visibility = ["//visibility:public"],
)

go_proto_library(
    name = "versioning_go_proto",
    compilers = ["@io_bazel_rules_go//proto:go_grpc"],
    importpath = "lsmv/proto/versioning",
    proto = ":versioning_proto",
    visibility = ["//visibility:public"],
)

go_library(
    name = "versioning",
    embed = [":versioning_go_proto"],
    importpath = "lsmv/proto/versioning",
    visibility = ["//visibility:public"],
)
